--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>Discover</title>
         <meta name="description" content="Home | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
         <meta property="og:title" content="Whoville Chamber of Commerce Home Page">
@@ -47,68 +47,50 @@
         <div class="container">
             <div class="demo">
                 <h3>Demographics</h3>
-                <p>
-                    <span class="label">Population:</span> 257 people
-                </p>
-                <p>
-                    <span class="label">Median Age:</span> 32.5 years
-                </p>    
-                <p>
-                    <span class="label">Median Income:</span> $35,414
-                </p>
+                <p><span class="label">Population:</span> 257 people</p>
+                <p><span class="label">Median Age:</span> 32.5 years</p>    
+                <p><span class="label">Median Income:</span> $35,414</p>
             </div>
 
             <div class="stats">
                 <h3>Statistics</h3>
-                <p>
-                    <span class="label">Race/Ethenicity:</span> 100% Whos
-                </p>
-                <p>
-                    <span class="label">Characteristices:</span> mix of human,<br>leporid and kangaroo-like
-                </p>    
-                <p>
-                    <span class="label">Commute time:</span> 5 minutes
-                </p>
+                <p><span class="label">Race/Ethenicity:</span> 100% Whos</p>
+                <p><span class="label">Characteristices:</span> mix of human,<br>leporid and kangaroo-like</p>    
+                <p><span class="label">Commute time:</span> 5 minutes</p>
             </div>
 
             <div class="attractions">
                 <h3>Attractions</h3>
-                <p>
-                    <span class="label">Sleigh Rides</span>
-                </p>
-                <p>
-                    <span class="label">Ice Skating</span>
-                </p>    
-                <p>
-                    <span class="label">Decorating Trees</span> 
-                </p>
+                <p></p><span class="label">Sleigh Rides</span></p>
+                <p><span class="label">Ice Skating</span></p>    
+                <p><span class="label">Decorating Trees</span></p>
             </div>
         </div>
         
 
         <div class="images">
             <figure>
-                <img class="hover" src="images/dog(1).webp" alt="Dog"  loading="lazy">
+                <img class="hover" src="images/dog(1).webp" alt="Dog" width="300" height="200" loading="lazy">
                 <figcaption>Max pulling sleigh</figcaption>
             </figure>
             <figure>
-                <img class="hover"  src="images/taxi(1).webp" alt="Vehicle"  loading="lazy">
+                <img class="hover"  src="images/taxi(1).webp" alt="Vehicle" width="300" height="200" loading="lazy">
                 <figcaption>Town vehicles</figcaption>
             </figure>
             <figure>
-                <img class="hover"  src="images/town(1).webp" alt="Town"  loading="lazy">
+                <img class="hover"  src="images/town(1).webp" alt="Town" width="300" height="200" loading="lazy">
                 <figcaption>Overview of Whoville town</figcaption>
             </figure>
             <figure>
-                <img class="hover"  src="images/sleighRide(1).webp" alt="Sleigh Ride"  loading="lazy">
+                <img class="hover"  src="images/sleighRide(1).webp" alt="Sleigh Ride" width="300" height="200" loading="lazy">
                 <figcaption>Sleigh ride adventures</figcaption>
             </figure>
             <figure>
-                <img class="hover"  src="images/toys(1).webp" alt="Dog"  loading="lazy">
+                <img class="hover"  src="images/toys(1).webp" alt="Dog" width="300" height="200" loading="lazy">
                 <figcaption>Christmas day toys</figcaption>
             </figure>
             <figure>
-                <img class="hover"  src="images/tree(1).webp" alt="Tree"  loading="lazy">
+                <img class="hover"  src="images/tree(1).webp" alt="Tree" width="300" height="200" loading="lazy">
                 <figcaption>Town christmas tree lighting </figcaption>
             </figure>
         </div>
