--- a/iProject/index.html
+++ b/iProject/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>Whoville Heights Home Page</title>
         <meta name="description" content="Home | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
         <meta property="og:title" content="Whoville Heights HOA Home Page">
         <meta property="og:description" content="Whoville Heights HOA home page">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://www.vmcdn.ca/f/files/glaciermedia/import/lmp-all/1271817-whoville-grinch-stole-christmas.jpg;w=851">
+        <meta property="og:image" content="https://s3.amazonaws.com/twbmarketingprod/files/production/514/b96b943cd2/whoville-christmas-scenic-backdrop-lightbox-c5f227.jpg">
         <meta property="og:image:alt" content="Whoville Heights HOA"> 
         <meta property="og:url" content="https://ekworsham.github.io/wdd231/iProject/">
         <meta property="og:url" content="https://www.facebook.com/keith.worsham.585/">
@@ -25,7 +25,7 @@
 <body>
 
     <header>
-        <img class="logo" src="" alt="whoville Heights HOA Logo" width="100" height="100" loading="lazy">
+        <img class="logo" src="images/logo.webp" alt="whoville Heights HOA Logo" width="75" height="75" loading="lazy">
         <div id="title">
             <h1>Whoville Heights HOA</h1>
         </div>
