--- a/iProject/index.html
+++ b/iProject/index.html
@@ -11,7 +11,7 @@
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://s3.amazonaws.com/twbmarketingprod/files/production/514/b96b943cd2/whoville-christmas-scenic-backdrop-lightbox-c5f227.jpg">
         <meta property="og:image:alt" content="Whoville Heights HOA"> 
-        <meta property="og:url" content="https://ekworsham.github.io/wdd231/iProject/">
+        <meta property="og:url" content="https://ekworsham.github.io/wdd231/iProject/index.html">
         <meta property="og:url" content="https://www.facebook.com/keith.worsham.585/">
         <meta property="og:image:alt" content="Keth Worsham - Facebook"> 
         <script src="scripts/iProject.js" defer></script>
@@ -52,13 +52,13 @@
         
         <div class="social">
             <a href="https://www.facebook.com/profile.php?id=100057151702793" target="_blank">
-                <img src="images/facebook.png" alt="fb icon" width="100" height="100" loading="lazy">
+                <img src="images/facebook.webp" alt="fb icon" width="50" height="50" loading="lazy">
             </a>
             <a href="https://x.com/" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon" width="100" height="100" loading="lazy">
+                <img src="images/twitter.webp" alt="twitter icon" width="50" height="50" loading="lazy">
             </a>
             <a href="https://www.linkedin.com/in/keith-worsham/" target="_blank">
-                <img src="images/LinkedIn.jpg" alt="linkedIn icon" width="100" height="100" loading="lazy">
+                <img src="images/LinkedIn.webp" alt="linkedIn icon" width="60" height="60" loading="lazy">
             </a>
         </div>
 
