--- a/iProject/sitePlan.html
+++ b/iProject/sitePlan.html
@@ -35,8 +35,8 @@
     <h3>Color Palette</h3>
    
     <p>Palette URL:</p>
-    <a href="https://coolors.co/ceb992-a1a688-73937e-585563"
-      target="_blank">https://coolors.co/ceb992-a1a688-73937e-585563</a>
+    <a href="https://coolors.co/0157ec-edbc23-2f853e-df8fdb"
+      target="_blank">https://coolors.co/0157ec-edbc23-2f853e-df8fdb</a>
 
     <table class="colors">
       <tr>
@@ -47,10 +47,10 @@
       </tr>
       
       <tr>
-        <td class="primary">#ceb992</td>
-        <td class="secondary">#a1a688</td>
-        <td class="accent1">#73937e</td>
-        <td class="accent2">#585563</td>
+        <td class="primary">#0157EC</td>
+        <td class="secondary">#EDBC23</td>
+        <td class="accent1">#2F853E</td>
+        <td class="accent2">#DF8FDB</td>
       </tr>
     </table>
 
