--- a/iProject/aboutUs.html
+++ b/iProject/aboutUs.html
@@ -47,6 +47,16 @@
     </header>
 
     <main>
+        <Div class="aboutUsMessage">
+            <div class="whos">
+                <img src="images/WHOS.webp" alt="whos" width="225" height="125" loading="lazy">
+            </div>  
+            <h2 class="about">About Whoville Heights HOA</h2>
+            <h3 class="special">Mt. Crumpits' largest community. It's a pretty special place!</h3>
+            <P>Whoville Heights HOA Property Owners' Association (WHPOA) is the property owners association that is responsible for assisting our homeowners in maintaining the level of excellence throughout the Whoville Heights community that makes it one of the premier communities in Whoville.  In that Whoville Heights is a deed-restricted community, there are Covenants that each homeowner is asked to adhere to; and WHPOA, along with our management company, Mt. Crumpit LLC is responsible for ensuring that the entire community is maintained in a way that will maintain home values and provide a high quality of life for every homeowner.<br><br>
+
+            The WHPOA Board meets every month on the forth Thursday and everyone is encouraged to attend to be better informed about your community.  Please take the time to acquaint yourself with the Master Design Guidelines and the Covenants so that you will know what is expected of each homeowner; 1. Christmas cheer and 2. All decorations must be filled with love and passion. You will find most information you might need on this website, but feel free to contact any WHPOA members who also members of the Whoville Chamber of Commerce at the <a href="https://ekworsham.github.io/wdd231/chamber/directory.html">directory</a>.  Enjoy your life in Seven Oaks, and know that we are here to help any way we can.</P>
+        </Div>
         
 
     </main>
