--- a/iProject/index.html
+++ b/iProject/index.html
@@ -46,7 +46,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="homeMain">
         <div class="heroImageContainer">
             <img class="heroImage" src="images/overview.webp" alt="overview of town" width="980" height="480" loading="lazy">
         </div>
