--- a/iProject/residentResources.html
+++ b/iProject/residentResources.html
@@ -46,30 +46,30 @@
         </nav>
     </header>
 
-    <main>
+    <main id="residentMain">
         <div class="whoContainer">
             <form method="get" action="whoThankYou.html">
-                <label>
-                    <h2><b>Resident Contact Info</b></h2>
+                <h2><br><br><b>Resident Contact Info</b></h2>
+                <label class="label">
                     Who First Name:
                     <input type="text" name="firstName" title="name" autocomplete="given-name" required>
                 </label>
-                <label>
+                <label class="label">
                     Who Last Name:
                     <input type="text" name="lastName" title="name" autocomplete="given-name" required>
                 </label>
-                <label>
+                <label class="label">
                     Email Address:
                     <input type="email" name="email" title="email"  autocomplete="email" placeholder = "whos@whoville.com" required>
                 </label>
-                <label>
+                <label class="label">
                     Who Phone:
                     <input type="tel" name="mobile" title="number"  autocomplete="tel" placeholder="(555) 123-WHO1" required>
                 </label>
-                <label>
+                <label class="label">
                     Request Details:
                     <textarea name="ReqDetails" title="Details"></textarea>
-                </label>
+                </label class="label">
                 <label>
                     <input type="hidden" name="timestamp" id="timestamp">
                     <input type="submit" value="Whoosh-it-over">
@@ -80,6 +80,10 @@
                <h3 id="who-resourse">Resident Resource</h3> 
             </div>
             <dialog class="who-box"></dialog>
+        </div>
+
+        <div id="sidebar">
+            <div id="message"></div>
         </div>
     </main>
 
