--- a/iProject/whoThankYou.html
+++ b/iProject/whoThankYou.html
@@ -46,9 +46,9 @@
         </nav>
     </header>
 
-    <main>
+    <main id="thankYouPage">
         <h2>THANK YOU FOR PROVIDING YOUR INFORMATION</h2>
-
+        <div id="thankYou"></div>
     </main>
    
     <footer>
