--- a/iProject/residentResources.html
+++ b/iProject/residentResources.html
@@ -69,7 +69,7 @@
                 <label class="label">
                     Request Details:
                     <textarea name="ReqDetails" title="Details"></textarea>
-                </label class="label">
+                </label>
                 <label>
                     <input type="hidden" name="timestamp" id="timestamp">
                     <input type="submit" value="Whoosh-it-over">
